--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="card__content">
                         <h3 id="projecten" class="card__title title title&#45;&#45;lg"><a
                                 class="color-darkest linken_hover"
-                                href="../Keuzeproject1/DoubleDev/hgh/index.html">
+                                href="../UploadVoorSinners/Keuzeproject1/DoubleDev/hgh/index.html">
                             Het Gouden Hart</a></h3>
                         <p>
                             Tijdens keuze project 1 hebben ik en drie medestudenten samen een website gemaakt voor
@@ -98,7 +98,7 @@
                 <div class="card card&#45;&#45;feature">
                     <div class="card__content">
                         <h3 class="card__title title title&#45;&#45;lg"><a class="color-darkest linken_hover"
-                                                                           href="../Keuzeproject1/DoubleDev/webbureau/index.html">DoubleDev</a>
+                                                                           href="../UploadVoorSinners/Keuzeproject1/DoubleDev/webbureau/index.html">DoubleDev</a>
                         </h3>
                         <p>
                             Voordat wij konden beginnnen aan de site voor Het Gouden Hart hebben wij eerst een
@@ -112,12 +112,12 @@
                 <div class="card card&#45;&#45;feature">
                     <div class="card__content">
                         <h3 class="card__title title title&#45;&#45;lg"><a class="color-darkest linken_hover"
-                                                                           href="../Keuzeproject1/DoubleDev/hgh/index.html">
+                                                                           href="../UploadVoorSinners/Keuzeproject1/DoubleDev/hgh/index.html">
                             Skilstaken</a></h3>
                         <p>
                             In ons eerste half jaar op de hogeschool heb ik een paar taken moeten maken. <a
-                                href="../skills2/r0739228skills2.html">Skillstaak 2</a> <a
-                                href="../skills3/r0739228skills3.html">Skillstaak 3</a>
+                                href="../UploadVoorSinners/skills2/r0739228skills2.html">Skillstaak 2</a> <a
+                                href="../UploadVoorSinners/skills3/r0739228skills3.html">Skillstaak 3</a>
                         </p>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                 <div class="card card&#45;&#45;feature">
                     <div class="card__content">
                         <h3 class="card__title title title&#45;&#45;lg"><a class="color-darkest linken_hover"
-                                                                           href="F9/index.html">Uitdaging 2</a>
+                                                                           href="../UploadVoorSinners/F9/index.html">Uitdaging 2</a>
                         </h3>
                         <p>
                             In het tweede semester kregen wij enkele uitdagingen. Deze uitdaging is gemaakt in samenwerking met <a href="http://r0766008.sinners.be/">Cody Volz</a>.
