--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="card__content">
                         <h3 id="projecten" class="card__title title title&#45;&#45;lg"><a
                                 class="color-darkest linken_hover"
-                                href="../UploadVoorSinners/Keuzeproject1/DoubleDev/hgh/index.html">
+                                href="Keuzeproject1/DoubleDev/hgh/index.html">
                             Het Gouden Hart</a></h3>
                         <p>
                             Tijdens keuze project 1 hebben ik en drie medestudenten samen een website gemaakt voor
