--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="card card&#45;&#45;feature">
                     <div class="card__content">
                         <h3 class="card__title title title&#45;&#45;lg"><a class="color-darkest linken_hover"
-                                                                           href="Keuzeproject1/DoubleDev/webbureau/index.html">DoubleDev</a>
+                                                                           href="../UploadVoorSinners/Keuzeproject1/DoubleDev/webbureau/index.html">DoubleDev</a>
                         </h3>
                         <p>
                             Voordat wij konden beginnnen aan de site voor Het Gouden Hart hebben wij eerst een
@@ -111,12 +111,13 @@
             <div class="grid__column grid__column--12 grid__column--6--md grid__column--3--lg">
                 <div class="card card&#45;&#45;feature">
                     <div class="card__content">
-                        <h3 class="card__title title title&#45;&#45;lg"><a class="color-darkest linken_hover">
+                        <h3 class="card__title title title&#45;&#45;lg"><a class="color-darkest linken_hover"
+                                                                           href="../UploadVoorSinners/Keuzeproject1/DoubleDev/hgh/index.html">
                             Skilstaken</a></h3>
                         <p>
                             In ons eerste half jaar op de hogeschool heb ik een paar taken moeten maken. <a
-                                href="skills2/r0739228skills2.html">Skillstaak 2</a> <a
-                                href="skills3/r0739228skills3.html">Skillstaak 3</a>
+                                href="../UploadVoorSinners/skills2/r0739228skills2.html">Skillstaak 2</a> <a
+                                href="../UploadVoorSinners/skills3/r0739228skills3.html">Skillstaak 3</a>
                         </p>
                     </div>
                 </div>
@@ -135,15 +136,34 @@
                 </div>
             </div>
         </div>
-        <div>
+
+        <div class="grid margin-y margin-md">
             <div class="grid__column grid__column--12 grid__column--6--md grid__column--3--lg">
                 <div class="card card&#45;&#45;feature">
                     <div class="card__content">
                         <h3 class="card__title title title&#45;&#45;lg"><a class="color-darkest linken_hover"
-                                                                           href="F9/index.html">Uitdaging 2</a>
+                                                                           href="../UploadVoorSinners/F9/index.html">Uitdaging
+                            2</a>
                         </h3>
                         <p>
-                            In het tweede semester kregen wij enkele uitdagingen. Deze uitdaging is gemaakt in samenwerking met <a href="http://r0766008.sinners.be/">Cody Volz</a>.
+                            In het tweede semester kregen wij enkele uitdagingen. Deze uitdaging is gemaakt in
+                            samenwerking met <a href="http://r0766008.sinners.be/">Cody Volz</a>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid__column grid__column--12 grid__column--6--md grid__column--3--lg">
+                <div class="card card&#45;&#45;feature">
+                    <div class="card__content">
+                        <h3 class="card__title title title&#45;&#45;lg"><a class="color-darkest linken_hover"
+                                                                           href="https://github.com/SpengeSec/PidgeonTracker_PoC">System
+                            Engineering & Analysis</a>
+                        </h3>
+                        <p>
+                            In het derde semester werd ons gevraagd om een oplossing te vinden voor een vastgesteld
+                            probleem. Het probleem was dat een oudere man niet vaak kan gaan controleren of zijn
+                            duiven aangekomen waren na hun vlucht. De laatste week hebben we dit probleem mogen
+                            uitwerken.
                         </p>
                     </div>
                 </div>
