--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="card card&#45;&#45;feature">
                     <div class="card__content">
                         <h3 class="card__title title title&#45;&#45;lg"><a class="color-darkest linken_hover"
-                                                                           href="../UploadVoorSinners/Keuzeproject1/DoubleDev/webbureau/index.html">DoubleDev</a>
+                                                                           href="Keuzeproject1/DoubleDev/webbureau/index.html">DoubleDev</a>
                         </h3>
                         <p>
                             Voordat wij konden beginnnen aan de site voor Het Gouden Hart hebben wij eerst een
@@ -112,12 +112,12 @@
                 <div class="card card&#45;&#45;feature">
                     <div class="card__content">
                         <h3 class="card__title title title&#45;&#45;lg"><a class="color-darkest linken_hover"
-                                                                           href="../UploadVoorSinners/Keuzeproject1/DoubleDev/hgh/index.html">
+                                                                           href="Keuzeproject1/DoubleDev/hgh/index.html">
                             Skilstaken</a></h3>
                         <p>
                             In ons eerste half jaar op de hogeschool heb ik een paar taken moeten maken. <a
-                                href="../UploadVoorSinners/skills2/r0739228skills2.html">Skillstaak 2</a> <a
-                                href="../UploadVoorSinners/skills3/r0739228skills3.html">Skillstaak 3</a>
+                                href="skills2/r0739228skills2.html">Skillstaak 2</a> <a
+                                href="skills3/r0739228skills3.html">Skillstaak 3</a>
                         </p>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                 <div class="card card&#45;&#45;feature">
                     <div class="card__content">
                         <h3 class="card__title title title&#45;&#45;lg"><a class="color-darkest linken_hover"
-                                                                           href="../UploadVoorSinners/F9/index.html">Uitdaging
+                                                                           href="F9/index.html">Uitdaging
                             2</a>
                         </h3>
                         <p>
