--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>HTML5 Thomas More</title>
+    <title>Simon Duchateau</title>
     <meta name="description" content="A CSS survival kit. Example of framework">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" sizes="32x32" href="favicon.ico"/>
