--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
                     vooropleiding in het secundair heb ik de keuze gemaakt om verder te studeren in de informatica.
                     Tot nu toe heb ik al een paar projecten gemaakt (te bezichtigen hieronder).
                 </p>
+                <p>
+                    Meer informatie kan u vinden in mijn CV. Je kan hem downloaden of bekijken.
+                    <br/>
+                    <a href="CV-Simon_Duchateau2.pdf" download>Download CV</a>
+                    <br/>
+                    <a href="CV-Simon_Duchateau2.pdf" target="_blank">Bekijk CV</a>
+                </p>
             </div>
         </div>
 
