Kleine aanpassingen - Tekst + Portfolio

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
             <div class="grid__column grid__column&#45;&#45;12 grid__column&#45;&#45;6&#45;&#45;md flex-first&#45;&#45;md">
                 <h3 class="title title&#45;&#45;xl" id="ik">Wie ben ik?</h3>
                 <p>
-                    Ik ben Simon Duchateau, geboren in 2000 te Hasselt. Ik ben een student aan de Thomas more hogeschool te Geel. Door mijn
-                    vooropleiding in het secundair heb ik de keuze gemaakt om verder te studeren in de informatica.
+                    Ik ben Simon Duchateau, geboren in 2000 te Hasselt. Ik ben een student aan de Thomas more hogeschool
+                    te Geel. Door mijn interesse in informatica heb ik in het secundaire al de keuze gemaakt om deze
+                    richting te studeren. Door deze keuze in het secundaire ben ik dit ook gaan verder studeren in de hogeschool.
                     Tot nu toe heb ik al een paar projecten gemaakt (te bezichtigen hieronder).
                 </p>
                 <p>
