--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="card__content">
                         <h3 class="card__title title title&#45;&#45;lg"><a class="color-darkest linken_hover"
                                                                            href="Keuzeproject1/DoubleDev/hgh/index.html">
-                            Skilstaken</a></h3>
+                            Skillstaken</a></h3>
                         <p>
                             In ons eerste half jaar op de hogeschool heb ik een paar taken moeten maken. <a
                                 href="skills2/r0739228skills2.html">Skillstaak 2</a> <a
